2.1.3
  -fixed empty varibale crashes

2.1.2
  -botStats are back

2.1.1
  -rewrote how variables are called and stored
  -botstats disabled for now

2.1.0
  -roll rewrite
  -added !rr fortune
  -lots more

2.0.4
  -moved all config data to config.js
  -setup one click update
  -added a node_modules check to start.bat/command

2.0.3
  -moved server ID for emoji to config.json

2.0.2
  -can now use emoji in DM channel with D1

2.0.1
  -Removed all fix commands

2.0.0
  -moved storage to firebase

1.9.3
  -use external emoji check
  -botstats now needs 'daily' 'weekly' 'monthly' 'alltime'
  -added !char modify

1.9.2
  -!swrpg and !genesys switch

1.9.1
  -emojiID lookup again

1.9
  -no custom emoji needed anymore

1.8.4
  -update all the .sendmessage() to .send()
  -daily stats update

1.8.3
  -botStats

1.8.2
  -rewrote init

1.8.1
  -you can now start a command at any point to a message

1.8.0
  -Added !obligation

1.7.10
  -added !char obligation

1.7.9
  -added Crit lookup command ie !crit ?12

1.7.8
  -added !species/!gleepglop

1.7.7
  -added !poly

1.7.6
  -added !char crit
  -reformated crit module to allow use of crit table elsewhere

1.7.4
  - added !char remove to help command
  - added stop for trying to add 2 characters named the same

1.7.3
  - Polyhedral die rolls are now anything !dXXX
  - fixed triumph and despairs

1.7.2
  - fixed !init set bug that reset Init order on new round

1.7.1
  - fixed !rr select

1.7.0
  - recoded !roll into functions
  - redid modules
  - added polyhedral
  - added !reroll

1.6.7
  - added result symbols to DiceIdentifiers in rolls
      Success/Suc/ *  = success
      Advantage/Adv/V = advantage
      Triumph/Tri/! = triumph
      Failure/Fail/- = failure
      Threat/Thr/T = threat
      Despair/Des/$ = despair
      Light/L = lightside point
      Dark/N = darkside point

1.6.6
  - destiny roll now uses !roll module.
  - space fix: !roll yyy ggg rr now rolls all dice
  - tweaked !init roll a bit

1.6.5